--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-<body>
+<body class="no-scroll">
     <div class="preload">
         <h2 class="preload__title">Explore Indonesia</h2>
         <div class="preload__loader"></div>
