--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 
                     <ul class="bnav-list">
                         <li class="bnav-list__nav-item">
-                            <a class="bnav-list__nav-link" href="./index.html">destinations</a>
+                            <a class="bnav-list__nav-link" href="#destinations">destinations</a>
                         </li>
                         <li class="bnav-list__nav-item">
-                            <a class="bnav-list__nav-link" href="./index.html">experiences</a>
+                            <a class="bnav-list__nav-link" href="#experiences">experiences</a>
                         </li>
                         <li class="bnav-list__nav-item">
-                            <a class="bnav-list__nav-link" href="./index.html">about</a>
+                            <a class="bnav-list__nav-link" href="#about">about</a>
                         </li>
                         <li class="bnav-list__nav-item">
-                            <a class="bnav-list__nav-link" href="./index.html">gallery</a>
+                            <a class="bnav-list__nav-link" href="#gallery">gallery</a>
                         </li>
                     </ul>
                 </div>
@@ -523,7 +523,7 @@
             </a>
             <address class="address">
                 <ul class="address-list">
-                    <li class="address-list__item"><a href="#" class="address-list__link">About</a></li>
+                    <li class="address-list__item"><a href="#about" class="address-list__link">About</a></li>
                     <li class="address-list__item"><a href="#" class="address-list__link">Pricing</a></li>
                     <li class="address-list__item"><a href="#" class="address-list__link">Company</a></li>
                     <li class="address-list__item"><a href="#" class="address-list__link">Blog</a></li>
